force/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Contact.Client_ID__c</formula>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_ID__c</fullName>
        <formula>Contact.Consumer_ID__c</formula>
        <label>Consumer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Id__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF( NOT(ISNULL(ContactId)), HYPERLINK(&quot;/&quot; +  Contact.Id  ,  Contact.FirstName  + &apos; &apos; +  Contact.LastName), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Contact.Birthdate__c</formula>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_Date__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>Text(Contact.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <formula>Contact.Other_Email__c</formula>
        <label>Other Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>